Added Prezi link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <li>
 <a href="http://si4t.github.io/Solr">http://si4t.github.io/Solr</a> - Indexer implementation for Apache Solr, to be used in conjunction with the above framework</li>
 </ul>
+<p>A brief overview of the project can be found in <a href="http://prezi.com/kznausrbt5ta/search-integration-for-tridion/">this presentation</a></p>
       </section>
     </div>
 
