--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a href="http://si4t.github.io/Solr">http://si4t.github.io/Solr</a> - Indexer implementation for Apache Solr, to be used in conjunction with the above framework</li>
 </ul>
 <p>A brief overview of the project can be found in <a href="http://prezi.com/kznausrbt5ta/search-integration-for-tridion/">this presentation</a></p>
-      <p>Thanks to <a href="www.contentbloom.com">Content Bloom</a> and <a href="www.sdl.com">SDL</a> for help getting this project started!</p>
+      <p>Thanks to <a href="http://www.contentbloom.com">Content Bloom</a> and <a href="http://www.sdl.com">SDL</a> for help getting this project started!</p>
         
       </section>
     </div>
