--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
       <section id="main_content" class="inner">
         <h3>Getting Started</h3>
         <p>If you are thinking of integrating a front-end (ie web application) search engine in your SDL Tridion
-        project, you are in the right place.</p>
-        <p>Probably you already have a search engine in mind, but if not we recommend looking at <a href="http://lucene.apache.org/solr/">Apache Solr</a>.</p>
-        <p>Firstly you will need to set up the <a href="http://si4t.github.io/SI4T">Framework</a></p> - a Generic method of configuring and publishing
+        project, you are in the right place.
+        Probably you already have a search engine in mind, but if not we recommend looking at <a href="http://lucene.apache.org/solr/">Apache Solr</a>.</p>
+        <p>Firstly you will need to set up the <a href="http://si4t.github.io/SI4T">Framework</a> - a Generic method of configuring and publishing
         indexing instructions from SDL Tridion</p>
         <p>Next you will need to implement an indexer for your search engine. This is the bridge between the framework
           and the specifics of the search engine you have selected. For Solr, you can use the ready-made <a href="http://si4t.github.io/Solr">Solr indexer</a>.
@@ -41,7 +41,7 @@
         <h3>
           <a name="si4t-projects" class="anchor" href="#si4t-projects">
             <span class="octicon octicon-link"></span>
-          </a>Here is a full list of SI4T Projects and Resources:</h3>
+          </a>Full list of SI4T Projects and Resources</h3>
           <ul>
             <li>
               <a href="http://si4t.github.io/SI4T">http://si4t.github.io/SI4T</a> - The Core, Generic SI4T Framework, including TBBs and Storage Extensions
