--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
             <li>
               A brief overview of the project can be found in <a href="http://prezi.com/kznausrbt5ta/search-integration-for-tridion/">this presentation</a>
             </li>
+            <li>
+              SI4T articles on <a href="http://www.tridiondeveloper.com/?s=si4t">www.tridiondeveloper.com</a>
+            </li>
+            <li>
+              SI4T questions on <a href="http://tridion.stackexchange.com/questions/tagged/si4t">tridion.stackexchange.com</a>
+            </li>
           </ul>
           <p>Thanks to <a href="http://www.contentbloom.com">Content Bloom</a> and <a href="http://www.sdl.com">SDL</a> for help getting this project started!</p>
       </section>
