Added NuGet link

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <li>
               SI4T questions on <a href="http://tridion.stackexchange.com/questions/tagged/si4t">tridion.stackexchange.com</a>
             </li>
+            <li>
+              SI4T packages in <a href="https://www.nuget.org/profiles/si4towners/">NuGet</a>
+            </li>
           </ul>
           <p>Thanks to <a href="http://www.contentbloom.com">Content Bloom</a> and <a href="http://www.sdl.com">SDL</a> for help getting this project started!</p>
       </section>
