--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
         </p>
         <p>Next publish your content to get it into the index</p>
         <p>Finally, you will need to implement some query logic in your web app code. It is not our goal to provide this here
-          as it is very technology and project requirement dependent, however watch this space for some examples using Solr
-          with Javascript, .NET and Java.
+          as it is very technology and project requirement dependent, however there are some <a href="https://github.com/SI4T/SI4T/tree/master/examples">examples</a>:
+          <ul>
+            <li>A <a href="https://github.com/SI4T/SI4T/tree/master/examples/dotnet/SI4T.Query">Solr query library for .NET</a> - also available on <a href="https://www.nuget.org/packages/SI4T.Query/">NuGet</a></li>
+            <li>An <a href="https://github.com/SI4T/SI4T/tree/master/examples/dotnet/SI4T.Mvc">example Controller and View</a> for ASP.NET MVC - also available on <a href="https://www.nuget.org/packages/SI4T.Mvc/">NuGet</a></li>
+          </ul>
         </p>
         <h3>
           <a name="si4t-projects" class="anchor" href="#si4t-projects">
