Added logo to homepage

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/SI4T">View on GitHub</a>
-         <h1 id="project_title">SI4T : Overview</h1>
-          <h2 id="project_tagline">SI4T = Search Integration 4 Tridion, a set of open source projects to help you get SDL Tridion CMS managed content into your web app search index</h2>
+         <h1 id="project_title"><img src="/images/si4t.png" style="background-color:#fff;float:left;height:140px;width:140px;margin:10px;"> SI4T : Overview</h1>
+          <h2 id="project_tagline" style="font-size:large">SI4T = Search Integration 4 Tridion, a set of open source projects to help you get SDL Tridion CMS managed content into your web app search index</h2>
         </header>
     </div>
 
